spade-tests/src/snapshots/spade_tests__mod_namespacing__missing_mod_for_subfile_in_subdir.snap
---
source: spade-tests/src/mod_namespacing.rs
---
mod submod;



error: Missing `mod subfile;` for src/submod/subfile.spade
  ┌─ src/submod/main.spade:1:1
  │
1 │ 
  │ ^ Missing `mod subfile;`
  │
  = Consider adding `mod subfile;`
  │
1 │ mod subfile; 
  │ +++++++++++++
